--- a/css/musica.css
+++ b/css/musica.css
@@ -122,7 +122,7 @@ a {
 }
 
 .musica-link a:hover {
-  background-image: linear-gradient(#93d1a1, #45a049);
+  background: linear-gradient(#93d1a1, #45a049);
   color: var(--corFundo);
   
 }
