--- a/css/musica.css
+++ b/css/musica.css
@@ -69,7 +69,7 @@ a {
 .musica-link a{
   text-transform: uppercase;
   /* background-image: linear-gradient(#F5FFF8, #c1d8c8); */
-  background-image: var(--gradienteBotao);
+  background-color: var(--corFundo);
   font-size: 14px;
   padding: 10px;
   border-radius: 4px;
